MDEV-20424: New default value for optimizer_use_condition-selectivity leads to bad plan

In the function prev_record_reads where one finds the different row combinations for a
subset of partial join, it did not take into account the selectivity of tables
involved in the subset of partial join.